--- a/serverless.yml
+++ b/serverless.yml
@@ -3,6 +3,8 @@ service: JobPostFilter
 provider:
   name: aws
   runtime: dotnetcore2.1
+  
+  role: arn:aws:iam::833191605868:role/JobPostFilterRole
 
   region: us-east-1
 
