--- a/src/JobPostFilter/JobPostFilter.csproj
+++ b/src/JobPostFilter/JobPostFilter.csproj
@@ -10,6 +10,6 @@
     <PackageReference Include="Amazon.Lambda.SQSEvents" Version="1.1.0" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.104.21" />
     <PackageReference Include="AWSSDK.SQS" Version="3.3.102.58" />
-    <PackageReference Include="Newtonsoft.JSON" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.13" />
   </ItemGroup>
 </Project>
