--- a/serverless_stg.yml
+++ b/serverless_stg.yml
@@ -16,4 +16,4 @@ functions:
     handler: JobPostFilter::JobPostFilter.Function::FunctionHandler
 
     events:
-      - sqs: arn:aws:sqs:eu-west-1:833191605868:JobPosts
+      - sqs: arn:aws:sqs:eu-west-1:833191605868:stg_JobPosts
