--- a/src/JobPostFilter/JobPostFilter.csproj
+++ b/src/JobPostFilter/JobPostFilter.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.104.21" />
     <PackageReference Include="AWSSDK.SQS" Version="3.3.102.58" />
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.13" />
+    <PackageReference Include="ServiceStack.Redis" Version="5.8.0" />
   </ItemGroup>
 </Project>
