--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@
 [Bb]in/
 [Oo]bj/
 publish/
-test/lcov.info
-test/JobPostFilter.Tests/coverage.json
+lcov.info
+coverage.json
+aws-lambda-tools-defaults.json
+.terraform/
